--- a/La Distrib'/Storyboards/Base.lproj/Main.storyboard
+++ b/La Distrib'/Storyboards/Base.lproj/Main.storyboard
@@ -599,7 +599,7 @@
                                                 <rect key="frame" x="0.0" y="28" width="315" height="75"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="Ozb-ee-GsT" id="ZI7-Ua-Cl2">
-                                                    <rect key="frame" x="0.0" y="0.0" width="315" height="74"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="315" height="74.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencilIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ziR-D0-TDk">
@@ -808,16 +808,16 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="jf2-wc-OmR" userLabel="QteStack">
-                                                            <rect key="frame" x="230" y="19" width="75" height="37"/>
+                                                            <rect key="frame" x="224" y="19" width="81" height="37"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qte." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3m-Lq-RwG">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="75" height="12"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="81" height="12"/>
                                                                     <fontDescription key="fontDescription" name="Roboto-ThinItalic" family="Roboto" pointSize="10"/>
                                                                     <color key="textColor" red="0.59541714189999995" green="0.18982923030000001" blue="0.36899501089999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VII-UV-5nB">
-                                                                    <rect key="frame" x="0.0" y="12" width="75" height="25"/>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" distribution="equalSpacing" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="VII-UV-5nB">
+                                                                    <rect key="frame" x="0.0" y="12" width="81" height="25"/>
                                                                     <subviews>
                                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8hT-1i-ZQl">
                                                                             <rect key="frame" x="0.0" y="2.5" width="20" height="20"/>
@@ -830,8 +830,8 @@
                                                                                 <action selector="changeValueNumberOfPurshased:" destination="9Oq-G9-P9L" eventType="touchUpInside" id="ahA-oP-RBD"/>
                                                                             </connections>
                                                                         </button>
-                                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="center" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="5re-5z-FRV" userLabel="nbCommand">
-                                                                            <rect key="frame" x="20" y="0.0" width="35" height="25"/>
+                                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="right" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="center" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="5re-5z-FRV" userLabel="nbCommand">
+                                                                            <rect key="frame" x="23" y="0.0" width="35" height="25"/>
                                                                             <color key="tintColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="35" id="5hC-tM-4kU"/>
@@ -841,7 +841,7 @@
                                                                             <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
                                                                         </textField>
                                                                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Wh-Wo-VcJ">
-                                                                            <rect key="frame" x="55" y="2.5" width="20" height="20"/>
+                                                                            <rect key="frame" x="61" y="2.5" width="20" height="20"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="20" id="FWJ-sH-09c"/>
                                                                                 <constraint firstAttribute="height" constant="20" id="kQy-WT-O0z"/>
